--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
   ],
   "scripts": {
     "prepare": "husky install",
-    "test": "npm run build && cross-env NODE_ENV=test jest && npm run lint",
     "start": "babel-node -- src/cli/bin db.json -r routes.json --port 8000",
     "lint": "eslint . --ignore-path .gitignore",
     "fix": "npm run lint -- --fix",
     "build": "babel src -d lib",
     "toc": "markdown-toc -i README.md",
     "postversion": "git push && git push --tags",
-    "prepublish": "npm test && npm run build"
+    "prepublish": "npm run build"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
